crawler: switch to shared auth key
